<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_servico"
            android:icon="@drawable/ic_assignment"
            android:title="@string/menu_servico" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_perm_contact"
            android:title="@string/menu_cliente" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_email"
                android:title="@string/menu_email" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_sobre" />
        </menu>
    </item>

</menu>
