<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.automatodev.atmconsultoria.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_servico"
        android:name="com.automatodev.atmconsultoria.fragments.ServicoFragment"
        android:label="@string/menu_servico"
        tools:layout="@layout/fragment_servico" />

    <fragment
        android:id="@+id/nav_cliente"
        android:name="com.automatodev.atmconsultoria.fragments.ClienteFragment"
        android:label="@string/menu_cliente"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.automatodev.atmconsultoria.fragments.AboutFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_about" />


</navigation>